not a good day but who cares?

--- a/ui.css
+++ b/ui.css
@@ -11,6 +11,15 @@ body {
 	font-size:4mm;
 }
 
+.column {
+	display:inline-block;
+	float:left;
+}
+
+.half {
+	width:50%;
+}
+
 #ui {
 	z-index:100000;
 	position:absolute;
@@ -127,4 +136,10 @@ body {
 
 #ui .list tr:hover, #ui .list td:hover {
 	text-decoration:underline;
+}
+
+#ui .border {
+	border:solid 1px White;
+	padding:15px;
+	margin:15px;
 }
